Prevent text from creating a native scrollbar.

--- a/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/Styles/simple-blog.less
+++ b/src/Orchard.Web/Themes/Bootstrap_3_3_4_SimpleBlog/Styles/simple-blog.less
@@ -41,6 +41,7 @@ ul.content-items {
         padding-bottom: 20px;
         border: none;
         border-bottom: thin solid gray;
+        overflow: hidden;
 
         header {
             padding: 0;
